server status dynamic, fix register, payment with khipu done

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
      </div>
     </nav>
     <div class="clearfix" id="u6477-5"><!-- content -->
-     <p>server <span id="u6477-2">off</span></p>
+     <p>server <span id="u6477-2"></span></p>
     </div>
     <div class="clip_frame" id="u6483"><!-- image -->
      <img class="block" id="u6483_img" src="images/logo-hubble-chico.png?crc=4157173995" data-hidpi-src="images/logo-hubble-chico_2x.png?crc=29176125" alt="" width="125" height="50"/>
