styles history donation changed, waiting for endpoint

--- a/panel-de-cuentas-lineage-hubble.html
+++ b/panel-de-cuentas-lineage-hubble.html
@@ -430,36 +430,16 @@
           </div>
           <div id="history-donation" class="option-panel">
             <h1 class="subtitle">HISTORY DONATION PANEL</h1>
-            <div class="box-info">
-              <h1>Last donations made</h1>
-              <div class="lines">
-                <div>ID: <span>donationID</span></div>
-                <div class="two">Amount: <span>donationAmount</span></div>
-                <div>Date:<span>4/15/2021 21:38:43</span></div>
-                <div class="two">Character<span>charName</span></div>
-                <div>Coins received:<span>1000</span></div>
+            <div class="containerHistory">
+              <div class="box-info">
+                <h1>Last donations made</h1>
+                <div class="lines">
+                  <div><b>donationID</b>   <i>19/09/2021</i> <button type="button">Details</button></div>
+                  <div class="two">Date: <span>donationAmount</span></div>
+                </div>
               </div>
             </div>
             <br>
-            <div class="box-info">
-              <div class="lines">
-                <div>ID: <span>donationID</span></div>
-                <div class="two">Amount: <span>donationAmount</span></div>
-                <div>Date:<span>4/15/2021 21:38:43</span></div>
-                <div class="two">Character<span>charName</span></div>
-                <div>Coins received:<span>1000</span></div>
-              </div>
-            </div>
-            <br>
-            <div class="box-info">
-              <div class="lines">
-                <div>ID: <span>donationID</span></div>
-                <div class="two">Amount: <span>donationAmount</span></div>
-                <div>Date:<span>4/15/2021 21:38:43</span></div>
-                <div class="two">Characetr<span>charName</span></div>
-                <div>Coins received:<span>1000</span></div>
-              </div>
-            </div>
           </div>
           
           <div id="changePass" class="option-panel">
