history donations done

--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             </input>
            </div>
            <div class="rgba-background rounded-corners clearfix colelem" id="u12936"><!-- group -->
-            <input class="rounded-corners clearfix grpelem input-form" id="u12939-3"><!-- content -->
+            <div class="rounded-corners clearfix grpelem input-form" id="u12939-3"><!-- content -->
              <p>&nbsp;</p>
-            </input>
+            </div>
            </div>
           </div>
          </form>
@@ -368,7 +368,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             <div class="clearfix colelem" id="pu13779"><!-- group -->
              <div class="grpelem" id="u13779"><!-- simple frame --></div>
              <div class="clearfix grpelem" id="u13778-4"><!-- content -->
-              <p>Recordar</p>
+              <p></p>
              </div>
              <button formnovalidate class="clearfix grpelem btn-form loginSubmit" id="u13772-4"><!-- content -->
               LOGIN
