--- a/panel-de-cuentas-lineage-hubble.html
+++ b/panel-de-cuentas-lineage-hubble.html
@@ -668,11 +668,8 @@
       createOrder: function (data, actions) {
         var selectedItemDescription = selectAmountDonation.options[selectAmountDonation.selectedIndex].getAttribute("itemDescription");
         var selectedItemPrice = parseFloat(selectAmountDonation.options[selectAmountDonation.selectedIndex].getAttribute("priceUSD"));
-        if (selectCharDonation.value == 'Select a character') {
-          return ;
-        }
-        // This function sets up the details of the transaction, including the amount and line item details.
-        return actions.order.create({
+        if (selectCharDonation.value != '' && selectCharDonation.value != 'Select a character') {
+          return actions.order.create({
           purchase_units: [{
             amount: {
               currency_code:'USD',
@@ -680,6 +677,16 @@
             }
           }]
         });
+        }else{
+          Swal.fire({
+                icon:'error',
+                title:'Error',
+                text:`A character must be selected`
+            });
+        }
+        console.log(selectCharDonation.value);
+        // This function sets up the details of the transaction, including the amount and line item details.
+        
       },
       onApprove: function (data, actions) {
         // This function captures the funds from the transaction.
