add top 10 list to index

--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
            <img class="block" id="u12243_img" src="images/fuego1.png?crc=490895624" data-hidpi-src="images/fuego1_2x.png?crc=514173100" alt="" width="627" height="305"/>
           </div>
           <div class="animate1 clearfix grpelem" id="u6517-8"><!-- content -->
-           <p>Preparate para una nueva aventura.<br/>Low Rates, Cronica Interlude C6, Proteccion Anti DDoS Admin, Support 24/7, <span id="u6517-4">No Pay To Win</span>, Retail</p>
+           <p>Get ready for a new adventure<br/>Low Rates, Interlude C6, Anti DDoS Protection Admin, Support 24/7, <span id="u6517-4">No Pay To Win</span>, Retail</p>
           </div>
           <div class="animate1 clearfix grpelem" id="u6520-4"><!-- content -->
-           <p>DESCARGAS PARA JUGAR:</p>
+           <p>DOWNLOADS TO PLAY:</p>
           </div>
           <div class="animate2 clip_frame grpelem" id="u6585"><!-- image -->
            <img class="block" id="u6585_img" src="images/grand-opening.png?crc=4203851578" data-hidpi-src="images/grand-opening_2x.png?crc=204927019" alt="" width="269" height="36"/>
@@ -261,7 +261,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
           </div>
           <div class="Button animate1 transition museBGSize rounded-corners clearfix grpelem" id="buttonu8576"><!-- container box -->
            <div class="clearfix grpelem" id="u8577-4"><!-- content -->
-            <a class="no-deco" href="https://www.mediafire.com/file/1j2o7orl7dxzvrk/%2521Interlude_Patch.rar/file" target="_blank" > CLIENTE SERVER </a>
+            <a class="no-deco" href="https://www.mediafire.com/file/1j2o7orl7dxzvrk/%2521Interlude_Patch.rar/file" target="_blank" > INTERLUDE CLIENT</a>
            </div>
           </div>
           <a href="https://facebook.com" target="_blank"><div class="Button animate1 rounded-corners transition shadow grpelem" id="buttonu6700"><!-- container box --></div></a>
@@ -294,8 +294,8 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
         <a class="anchor_item grpelem" id="server_rates"></a>
         <div class="clearfix grpelem" id="pu12876-6"><!-- column -->
          <div class="clearfix colelem" id="u12876-6"><!-- content -->
-          <p id="u12876-2">CREA TU CUENTA Y JUEGA</p>
-          <p id="u12876-4">Registrarse! Rellene los campos del formulario abajo.</p>
+          <p id="u12876-2">CREATE YOUR ACCOUNT AND PLAY</p>
+          <p id="u12876-4">To register, Fill in the fields of the form below</p>
          </div>
          <div class="clearfix colelem" id="ppu12882"><!-- group -->
             <form id="registerForm">
@@ -310,7 +310,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
            </div>
            <div class="rgba-background rounded-corners clearfix colelem" id="u12885"><!-- group -->
             <div class="clearfix grpelem" id="u12921-4"><!-- content -->
-             <p id="u12921-2">* CONTRASEÑA:</p>
+             <p id="u12921-2">* PASSWORD:</p>
             </div>
             <input class="rounded-corners clearfix grpelem input-form txt-reg-pass" id="u12903-3" required type="password"><!-- content -->
              <p>&nbsp;</p>
@@ -318,7 +318,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
            </div>
            <div class="rgba-background rounded-corners clearfix colelem" id="u12888"><!-- group -->
             <div class="clearfix grpelem" id="u12924-4"><!-- content -->
-             <p id="u12924-2">* REPITA CONTRASEÑA:</p>
+             <p id="u12924-2">* REPEAT PASSWORD:</p>
             </div>
             <input class="rounded-corners clearfix grpelem input-form txt-reg-pass2" required id="u12906-3" type="password"><!-- content -->
              <p>&nbsp;</p>
@@ -334,7 +334,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
            </div>
            <div class="rgba-background rounded-corners clearfix colelem" id="u12894"><!-- group -->
             <div class="clearfix grpelem" id="u12930-4"><!-- content -->
-             <p id="u12930-2">* REPITA E-MAIL:</p>
+             <p id="u12930-2">* REPEAT E-MAIL:</p>
             </div>
             <input class="rounded-corners clearfix grpelem input-form txt-reg-mail2" required id="u12912-3" type="email"><!-- content -->
              <p>&nbsp;</p>
@@ -351,7 +351,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
           <div class="clearfix grpelem" id="u13809"><!-- group -->
            <div class="shadow rgba-background rounded-corners clearfix grpelem" id="u13806"><!-- column -->
             <div class="clearfix colelem" id="u13771-6"><!-- content -->
-             <p id="u13771-4"><span id="u13771"></span><span id="u13771-2"> </span>LOGIN CUENTA</p>
+             <p id="u13771-4"><span id="u13771"></span><span id="u13771-2"> </span>LOGIN ACCOUNT</p>
             </div>
             <div class="clearfix colelem" id="u13773-4"><!-- content -->
              <p id="u13773-2">ID</p>
@@ -420,7 +420,7 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
             <p>&nbsp;</p>
            </div>
            <Button type="submit" form="registerForm"  value="Submit" formnovalidate class="rounded-corners clearfix colelem registerSubmit" id="u12957-4"><!-- content -->
-            REGISTRAR
+            REGISTER
            </Button>
           </div>
           <div class="PamphletWidget clearfix widget_invisible grpelem" id="pamphletu9224" data-islightbox="true"><!-- none box -->
@@ -663,89 +663,29 @@ COPYRIGHT © 2016 MuseShop.net / Skilltech.co / SkilltechWebDesign.com Do not co
       <div class="clearfix" id="u14680_align_to_page">
        <div class="clearfix grpelem" id="u14699-4"><!-- content -->
         <p>TOP PVP</p>
-        <table class="toplist">
+        <table class="top10PvpList">
            <tr>
               <th>Ranking</th>
               <th>Nickname</th>
            </tr>
-           <tr>
-              <td>1.</td>
-              <td>Dev1</td>
-           </tr>
-           <tr>
-              <td>2.</td>
-              <td>Dev2</td>
-           </tr>
-           <tr>
-            <td>3.</td>
-            <td>No data</td>
-         </tr>
-         <tr>
-            <td>4.</td>
-            <td>No data</td>
-         </tr>
-         <tr>
-            <td>5.</td>
-            <td>No data</td>
-         </tr>
         </table>
        </div>
        <div class="clearfix grpelem" id="u14702-4"><!-- content -->
         <p>TOP CLAN</p>
-        <table class="toplist">
+        <table class="top10Clanlist">
          <tr>
             <th>Ranking</th>
             <th>Clan name</th>
          </tr>
-         <tr>
-            <td>1.</td>
-            <td>Devs</td>
-         </tr>
-         <tr>
-            <td>2.</td>
-            <td>Random</td>
-         </tr>
-         <tr>
-          <td>3.</td>
-          <td>Random1</td>
-       </tr>
-       <tr>
-          <td>4.</td>
-          <td>No data</td>
-       </tr>
-       <tr>
-          <td>5.</td>
-          <td>No data</td>
-       </tr>
       </table>
        </div>
        <div class="clearfix grpelem" id="u14705-4"><!-- content -->
-        <p>BOSS JEWELS LOC</p>
-        <table class="toplist">
+        <p>TOP PK</p>
+        <table class="top10PkList">
          <tr>
-            <th>Owner </th>
-            <th>Jewell Boss</th>
+            <th>Ranking </th>
+            <th>Nickname</th>
          </tr>
-         <tr>
-            <td>Dev1</td>
-            <td>Valaka's Necklace</td>
-         </tr>
-         <tr>
-            <td>Dev2</td>
-            <td>Baium's Ring</td>
-         </tr>
-         <tr>
-          <td>No data</td>
-          <td>No data</td>
-       </tr>
-       <tr>
-          <td>No data</td>
-          <td>No data</td>
-       </tr>
-       <tr>
-          <td>No data</td>
-          <td>No data</td>
-       </tr>
       </table>
        </div>
       </div>
