--- a/panel-de-cuentas-lineage-hubble.html
+++ b/panel-de-cuentas-lineage-hubble.html
@@ -663,7 +663,8 @@
         layout: 'horizontal',
         label: 'paypal',
         height: 50,
-        width: 110
+        width: 110,
+        tagline: false
       },
       createOrder: function (data, actions) {
         var selectedItemDescription = selectAmountDonation.options[selectAmountDonation.selectedIndex].getAttribute("itemDescription");
