update styles in index

--- a/panel-de-cuentas-lineage-hubble.html
+++ b/panel-de-cuentas-lineage-hubble.html
@@ -647,7 +647,7 @@
     onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }"
     onerror="window.Muse.assets.check();"></script>
   <script
-    src="https://www.paypal.com/sdk/js?client-id=ATIlZ0ha4cjy4vOGO_t-e4wH5x8MXBLy9kaMdUWSMyT68yRxSfTQa3IKpWtDEI-jAz9RFEel-Iq2dkLz"> // Required. Replace YOUR_CLIENT_ID with your sandbox client ID.
+    src="https://www.paypal.com/sdk/js?client-id=ATIlZ0ha4cjy4vOGO_t-e4wH5x8MXBLy9kaMdUWSMyT68yRxSfTQa3IKpWtDEI-jAz9RFEel-Iq2dkLz"> 
     </script>
   <script>
     paypal.Buttons({
